# logdiff

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  comparator.h  logdiff.cpp
tests/: CMakeLists.txt  run_tests.sh  test_comparator.cpp
